Ported over a bunch of unit tests from the old project. Started the task of updating and enhancing them. Implemented a whole bunch of fixes to core logic.